--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,12 @@ cmake_minimum_required(VERSION 2.8...3.13)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall /wd4514 /wd4668 /wd4062 /wd5267 /wd4061 /wd5264 /wd4820 /wd5038 /wd5045")
 # c++ language version level: c++11
 set(CMAKE_CXX_STANDARD 11)
-# cmake project name: "project1"
-project(libsat355 VERSION 0.1.0)
+# cmake project name: "libsat"
+project(libsat VERSION 0.1.0)
 
 # add CTest capability
 include(CTest)
 enable_testing()
-
 
 #Tricky: you determine whether you're build for x64(64bit) or x86(32bits) by examining the sizeof(void*) pointer you're compiling for.
 math(EXPR platform_bits "${CMAKE_SIZEOF_VOID_P} * 8")
@@ -29,25 +28,6 @@ endforeach()
 
 MESSAGE (STATUS "${CMAKE_BINARY_DIR}/../lib/win-x64: " ${CMAKE_BINARY_DIR}/../lib/win-x64)
 
- ## Output directory for libraries in Debug configuration
- #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/${OUTPUT_DEBUG})
- ## Output directory for libraries in Release configuration
- #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/${OUTPUT_REL})
-
-
- #if(CMAKE_BUILD_TYPE STREQUAL "Debug")
- #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OUTPUT_DEBUG}")
- #set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OUTPUT_DEBUG}")
- #set(CMAKE_EXECUTABLE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OUTPUT_DEBUG}")
-#else()
-# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OUTPUT_REL}")
-# #set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OUTPUT_REL}")
-# #set(CMAKE_EXECUTABLE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OUTPUT_REL}")
-#endif()
-
-
-#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY build)
-
 include_directories(cppOrbitTools/orbitTools/core)
 include_directories(cppOrbitTools)
 file(GLOB SRC_FILES src/*.cpp cppOrbitTools/orbitTools/core/*.cpp cppOrbitTools/orbitTools/orbit/*.cpp)
@@ -56,10 +36,9 @@ set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
 
-add_library(libsat SHARED ${SRC_FILES})
-#target_compile_definitions(libsat PUBLIC /wd 4514)
-target_include_directories(libsat PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-install(TARGETS libsat DESTINATION build)
+add_library(libsat355 SHARED ${SRC_FILES})
+target_include_directories(libsat355 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+install(TARGETS libsat355 DESTINATION build)
 
 # cmake -G "Visual Studio 17 2022"
 # cmake -G "Visual Studio 17 2022" -S . -B ./build
