Changes made as requested and time param works correctly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,65 +27,23 @@ endforeach()
 
 MESSAGE (STATUS "${CMAKE_BINARY_DIR}/../lib/win-x64: " ${CMAKE_BINARY_DIR}/../lib/win-x64)
 
-#include_directories(cppOrbitTools/orbitTools/core)
-#include_directories(cppOrbitTools)
-#file(GLOB SRC_FILES src/*.cpp cppOrbitTools/orbitTools/core/*.cpp cppOrbitTools/orbitTools/orbit/*.cpp)
-
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
-
-#add_library(libsat355 SHARED ${SRC_FILES})
-#target_include_directories(libsat355 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-#install(TARGETS libsat355 DESTINATION build)
 
 find_program(GCOV_PATH gcov)
 if(NOT GCOV_PATH)
   message(FATAL_ERROR "Code coverage analysis requires gcov!")
 endif()
 
-
+# Organizes project into folders to reduce clutter
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-
 add_subdirectory(src build)
-
-
 add_subdirectory(tests)
-
-
 
 ## cmake compile
 # cmake -G "Visual Studio 17 2022" -S . -B ./build
 
 ## cmake clean
 # cmake --build ./build/ --target clean
-
-
-
-#cmake_minimum_required(VERSION 3.13)
-#
-#project(gtest-demo LANGUAGES CXX)
-#
-## set the C++ standard
-#set(CMAKE_CXX_STANDARD 11)
-#set(CMAKE_CXX_STANDARD_REQUIRED ON)
-#set(CMAKE_CXX_EXTENSIONS OFF)
-#
-## place binaries and libraries according to GNU standards
-#include(GNUInstallDirs)
-#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
-#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
-#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
-#
-## we cannot analyse results without gcov
-#find_program(GCOV_PATH gcov)
-#if(NOT GCOV_PATH)
-#  message(FATAL_ERROR "Code coverage analysis requires gcov!")
-#endif()
-#
-#add_subdirectory(src)
-#
-#enable_testing()
-
-#add_subdirectory(test)
