Created app and linked libsat355 library

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
             "program": "${workspaceFolder}/lib/win-x64/unit_tests.exe",
             "args": [], // No Args
             "cwd": "${workspaceFolder}/lib/win-x64",
-            "stopAtEntry": true, // Set to true to stop program execution at the first line of code
+            "stopAtEntry": false, // Set to true to stop program execution at the first line of code
             "preLaunchTask": "build", // tasks.json: {"label": "build"}
         },
 
@@ -54,7 +54,7 @@
             "program": "${workspaceFolder}/lib/win-x64/unit_tests.exe",
             "args": [], // No Args
             "cwd": "${workspaceFolder}/lib/win-x64",
-            "stopAtEntry": true, // Set to true to stop program execution at the first line of code
+            "stopAtEntry": false, // Set to true to stop program execution at the first line of code
             "preLaunchTask": "build", // tasks.json: {"label": "build"}
             // MIMode indicates to VSCode which debugger should be used.
             // Can only be gdb or lldb.
