--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,7 @@
 
+# Allow testing
 enable_testing()
+# Voodoo to fetch googletest from github
 include(FetchContent)
 FetchContent_Declare(gtest
   QUIET
@@ -10,11 +12,10 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(gtest)
 
-add_executable(
-    unit_tests
-    test1.cpp
-    )
+# Define an executable called unit_test using test1.cpp
+add_executable(unit_tests test1.cpp)
 
+# Compile options to silence warnings
 target_compile_options(unit_tests PRIVATE "/EHsc")
 #add_test(NAME MyTest COMMAND ${CMAKE_COMMAND} -E chdir ${CMAKE_BINARY_DIR} ctest -R MyTest)
 add_test(NAME unit_tests
@@ -22,8 +23,7 @@ add_test(NAME unit_tests
     -E chdir ${CMAKE_BINARY_DIR}/../lib/win-x64 ctest -R unit_tests
     )
 
-MESSAGE(${CMAKE_BINARY_DIR}/../lib/win-x64)
-
+# Link the unit_test to the library libsat355 and gtest_main
 target_link_libraries(unit_tests
   PRIVATE
     libsat355
