--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 cmake_minimum_required(VERSION 3.13)
 
 # compile flags: -Wall "enable all compiler warnings"
+# CMAKE_CXX_FLAGS is a preexisting magic supervariable that tells the compiler what compile options it should use
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall /wd4514 /wd4668 /wd4062 /wd5267 /wd4061 /wd5264 /wd4820 /wd5038 /wd5045 /wd4577")
 # c++ language version level: c++11
 set(CMAKE_CXX_STANDARD 11)
@@ -15,6 +16,7 @@ include(CTest)
 math(EXPR platform_bits "${CMAKE_SIZEOF_VOID_P} * 8")
 set(platform_dir ${CMAKE_SYSTEM_NAME}${platform_bits}-${CMAKE_CXX_COMPILER_ID}${CMAKE_CXX_COMPILER_VERSION})
 
+# Set the output directory for each build configuration
 foreach(config DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
 
     foreach(var CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${config} CMAKE_LIBRARY_OUTPUT_DIRECTORY_${config} CMAKE_RUNTIME_OUTPUT_DIRECTORY_${config})
@@ -25,8 +27,7 @@ foreach(config DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
 
 endforeach()
 
-MESSAGE (STATUS "${CMAKE_BINARY_DIR}/../lib/win-x64: " ${CMAKE_BINARY_DIR}/../lib/win-x64)
-
+# Set the CPACK variables
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
@@ -39,8 +40,10 @@ endif()
 # Organizes project into folders to reduce clutter
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
+# Include, build, and read Makefiles from all subdirectories
 add_subdirectory(src build)
 add_subdirectory(app)
+# enable testing
 enable_testing()
 add_subdirectory(tests)
 
