--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 #  Finds libsat355's cpp files to be used in this build
 file(GLOB SRC_FILES "libsat355.cpp" "../cppOrbitTools/orbitTools/core/*.cpp" "../cppOrbitTools/orbitTools/orbit/*.cpp")
 # Set any external #defines (-D MYDEFINE) for libsat355
-set(LIBSAT355_DEFINES DLL_EXPORTS) #Note EXPORTS, plural, meaning use __declspec(dllexport) instead of __declspec(dllimport)
+set(LIBSAT355_DEFINES DLL_EXPORTS) #Note -DDLL_EXPORTS, plural, meaning use __declspec(dllexport) instead of __declspec(dllimport)
 
 # Define a library called libsat355 using the cpp files found above
 
@@ -21,7 +21,9 @@ endif()
 target_compile_definitions(libsat355 PRIVATE ${LIBSAT355_DEFINES})
 
 # Indicate the location to find #include (-I dir) files when compiling source
-target_include_directories(libsat355 PRIVATE ../cppOrbitTools ../cppOrbitTools/orbitTools/core ../cppOrbitTools/orbitTools/orbit ${CMAKE_CURRENT_SOURCE_DIR})
+# TRICKY: We must place this include path first to override bogus headers in the zeptomoby code
+target_include_directories(libsat355 BEFORE PRIVATE ../cppOrbitTools)
+target_include_directories(libsat355 AFTER PRIVATE ../cppOrbitTools/orbitTools/core ../cppOrbitTools/orbitTools/orbit ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Tell cmake how to place the output executable in a tidy place a client can find it
 install(TARGETS libsat355 DESTINATION lib)
