--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,11 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+[Ll]ib/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+.DS_Store
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
