--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,16 @@ if(WIN32)
     # Windows-specific compile settings
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall /wd4514 /wd4668 /wd4062 /wd5267 /wd4061 /wd5264 /wd4820 /wd5038 /wd5045 /wd4577")
 elseif(APPLE)
-    # Mac-specific compile settings
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable")
-    set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk")
-    
-elseif(IOS)
-    # ios-specific compile settings
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable -miphoneos-version-min=8.0")
-    set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS16.2.sdk")
+    if(IOS)
+        # ios-specific compile settings
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable -miphoneos-version-min=8.0")
+        set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS16.2.sdk")
+        set(CMAKE_OSX_ARCHITECTURES "arm64")
+    else()
+        # Mac-specific compile settings
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable")
+        set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk")
+    endif()
 endif()
 
 
@@ -44,9 +46,11 @@ foreach(config _DEBUG _RELEASE _RELWITHDEBINFO _MINSIZEREL "")
         if(WIN32)
             set(${var} "${CMAKE_BINARY_DIR}/../lib/win-x64")
         elseif(APPLE)
-            set(${var} "${CMAKE_BINARY_DIR}/../lib/macos")
-        elseif(IOS)
-            set(${var} "${CMAKE_BINARY_DIR}/../lib/ios")
+            if(IOS)
+                set(${var} "${CMAKE_BINARY_DIR}/../lib/ios")
+            else()
+                set(${var} "${CMAKE_BINARY_DIR}/../lib/macos")
+            endif()
         endif()
         string(TOLOWER "${${var}}" ${var})
         MESSAGE(${var})
@@ -72,13 +76,17 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 # Include, build, and read Makefiles from all subdirectories
 add_subdirectory(src build)
-add_subdirectory(app)
-# enable testing
-enable_testing()
-add_subdirectory(tests)
+if(NOT IOS)
+    add_subdirectory(app)
+    # enable testing
+    enable_testing()
+    add_subdirectory(tests)
+
 
 # Tell cmake how to place the output executable in a tidy place a client can find it
 install(TARGETS app355 DESTINATION out/app)
 
 # Tell cmake how to place the output executable in a tidy place a client can find it
 install(TARGETS unit_tests DESTINATION out/tests)
+
+endif()
