--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,8 +40,8 @@
                 "MIMode": "gdb"
             },
             "osx": {
-                "program": "${workspaceFolder}/lib/macos/unit_tests",  
-                "args": [], 
+                "program": "${workspaceFolder}/lib/macos/app355",  
+                "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/macos",
                 "MIMode": "lldb"
             },
@@ -54,7 +54,7 @@
             
             //"args": [], // No Args
             //"cwd": "${workspaceFolder}/lib/win-x64", // Change this to the directory of your executable
-            "stopAtEntry": false, // Set to true to stop program execution at the first line of code
+            "stopAtEntry": true, // Set to true to stop program execution at the first line of code
             // MIMode indicates to VSCode which debugger should be used.
             // Can only be gdb or lldb.
         },
