--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,8 @@ foreach(config _DEBUG _RELEASE _RELWITHDEBINFO _MINSIZEREL "")
             endif()
         endif()
         string(TOLOWER "${${var}}" ${var})
-        MESSAGE(${var})
-        MESSAGE(${${var}})
+        #MESSAGE(${var})
+        #MESSAGE(${${var}})
     endforeach()
 
 endforeach()
